AWS deploy scripts, RBAC (admin/viewer), CORS/CSP fixes, Postman tests, UX errors
- Add deploy/aws CloudFormation (ECS Fargate, ALB, RDS) and PowerShell/bash scripts
- Backend: JWT roles claim, UserRole, admin bootstrap, method security for mutations
- Backend: RootController public GET /, validation and access-denied handlers
- Frontend: admin guard, role badge, signals for login/register errors, http error helper
- Frontend: CSP connect-src for ELB; environment points to deployed API
- Postman collection + local environment; README deployment and professor link notes

Co-authored-by: Cursor <cursoragent@cursor.com>