@@ -1,5 +1,6 @@
 package com.iot.coldchain.config;
 
+import java.util.Collections;
 import java.util.List;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -12,9 +13,14 @@ public class CorsConfig {
   @Bean
   CorsConfigurationSource corsConfigurationSource() {
     CorsConfiguration cfg = new CorsConfiguration();
-    cfg.setAllowedOrigins(List.of("http://localhost:4200", "http://localhost:4201"));
+    cfg.setAllowedOrigins(List.of(
+        "http://localhost:4200",
+        "http://localhost:4201",
+        "http://127.0.0.1:4200",
+        "http://127.0.0.1:4201"));
     cfg.setAllowedMethods(List.of("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
-    cfg.setAllowedHeaders(List.of("Authorization", "Content-Type"));
+    // "*" + allowCredentials(true) + origins explicitos: Spring reenvia los headers del preflight (incl. Accept).
+    cfg.setAllowedHeaders(Collections.singletonList(CorsConfiguration.ALL));
     cfg.setAllowCredentials(true);
 
     UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
